--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.31.0",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.1"
+    "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
+    "@vercel/analytics/react": "https://esm.sh/@vercel/analytics@1.4.1/react?external=react,react-dom",
+    "@vercel/analytics/": "https://aistudiocdn.com/@vercel/analytics@^1.6.1/"
   }
 }
 </script>
